[Qt] Path::boundingRect() is unnecessarily slow. https://bugs.webkit.org/show_bug.cgi?id=66854

Patch by Andreas Kling <kling@webkit.org> on 2011-08-25
Reviewed by Benjamin Poulain.

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::stroke): Remove Qt-specific optimization
since calling Path::boundingRect() will now do exactly the same thing.
* platform/graphics/qt/PathQt.cpp:
(WebCore::Path::boundingRect): Return QPainterPath::controlPointRect() since
that is much faster than computing the (precise) QPainterPath::boundingRect()
and Path::boundingRect() is not expected to be 100% precise anyway.

Canonical link: https://commits.webkit.org/82724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93774 268f45cc-cd09-0410-ab3c-d52691b4dbfc