third_party/WebKit/Source/WebCore/platform/graphics/qt/PathQt.cpp
@@ -1,8 +1,9 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2006 Zack Rusin   <zack@kde.org>
- *               2006 Rob Buis     <buis@kde.org>
- *               2009, 2010 Dirk Schulze <krit@webkit.org>
+ * Copyright (C) 2006 Zack Rusin <zack@kde.org>
+ * Copyright (C) 2006 Rob Buis <buis@kde.org>
+ * Copyright (C) 2009, 2010 Dirk Schulze <krit@webkit.org>
+ * Copyright (C) 2010, 2011 Andreas Kling <kling@webkit.org>
  *
  * All rights reserved.
  *
@@ -150,7 +151,7 @@ void Path::translate(const FloatSize& size)
 
 FloatRect Path::boundingRect() const
 {
-    return m_path.boundingRect();
+    return m_path.controlPointRect();
 }
 
 FloatRect Path::strokeBoundingRect(StrokeStyleApplier* applier) const
